--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,11 @@ h1{
     color:var(--clr-text);
 }
 
+body{
+    padding: 20px;
+}
+
+/* ============== Search engine ============== */
 .search-engine{
     background-color: var(--clr-base);
     border: solid 2px var(--clr-text);
@@ -51,6 +56,11 @@ h1{
     padding-left: 7px;
 }
 
+.hidden{
+    display: none;
+}
+
+/* ============== Table ============== */
 .content-table{
     border-collapse: collapse;
     margin: 25px 0;
@@ -59,6 +69,7 @@ h1{
     border-radius: 5px 5px 0 0;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    
 }
 
 .content-table thead th{
@@ -66,6 +77,7 @@ h1{
     color: whitesmoke;
     text-align: left;
     font-weight: bold;
+
 }
 
 .content-table th,
@@ -84,4 +96,6 @@ h1{
 .content-table tbody tr:last-of-type{
     border-bottom: 2px solid #009879;
 }
+
+
 
