--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,6 @@
 :root {
     --clr-base: #f3f3f3;
-    --clr-text: #009870;
+    --clr-text: #045983;
 }
 
 /* @media (prefers-color-scheme: dark){
@@ -16,6 +16,7 @@
 }
 h1 {
     color: var(--clr-text);
+    padding-bottom: 20px;
 }
 
 .container {
@@ -56,7 +57,7 @@ h1 {
 }
 
 .search-icon {
-    color: #009870;
+    color: var(--clr-text);
     align-self: center;
     font-size: 25px;
     width: 30px;
@@ -71,6 +72,8 @@ h1 {
     font-size: 0.9em;
     border-radius: 5px 5px 0 0;   
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    width: 100%;
+    
 }
 
 .content-table thead th {
