--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --clr-base: #f3f3f3;
-    --clr-text: #045983;
+  --clr-base: #f3f3f3;
+  --clr-text: #045983;
 }
 
 /* @media (prefers-color-scheme: dark){
@@ -10,94 +10,95 @@
     }
 } */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 h1 {
-    color: var(--clr-text);
-    padding-bottom: 20px;
+  color: var(--clr-text);
+  padding-bottom: 20px;
 }
 
 .container {
-    padding: 20px;
-    width: 100%;
+  padding: 20px;
+  width: 100%;
 }
 
 /* ============== Search engine ============== */
 .search-engine {
-    background-color: var(--clr-base);
-    border: solid 2px var(--clr-text);
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    border-radius: 10px;
-    width: 300px;
-    height: 32px;
+  background-color: var(--clr-base);
+  border: solid 2px var(--clr-text);
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  border-radius: 10px;
+  width: 300px;
+  height: 32px;
 }
 
 .search-text {
-    background-color: transparent;
-    padding-left: 5px;
-    font-size: 18px;
-    border: none;
-    width: 190px;
-    height: 32px;
-    outline: none;
+  background-color: transparent;
+  padding-left: 5px;
+  font-size: 18px;
+  border: none;
+  width: 190px;
+  height: 32px;
+  outline: none;
 }
 
 .search-bnt {
-    font-weight: bold;
-    background-color: var(--clr-text);
-    color: whitesmoke;
-    border-radius: 0 7px 7px 0;
-    border: none;
-    width: 60px;
-
+  font-weight: bold;
+  background-color: var(--clr-text);
+  color: whitesmoke;
+  border-radius: 0 7px 7px 0;
+  border: none;
+  width: 60px;
 }
 
 .search-icon {
-    color: var(--clr-text);
-    align-self: center;
-    font-size: 25px;
-    width: 30px;
-    padding-left: 7px;
+  color: var(--clr-text);
+  align-self: center;
+  font-size: 25px;
+  width: 30px;
+  padding-left: 7px;
 }
-
 
 /* ============== Table ============== */
 .content-table {
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.9em;
-    border-radius: 5px 5px 0 0;   
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    width: 100%;
-    
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  border-radius: 5px 5px 0 0;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  width: 100%;
 }
 
 .content-table thead th {
-    background-color: var(--clr-text);
-    color: whitesmoke;
-    text-align: left;
-    font-weight: bold;
+  background-color: var(--clr-text);
+  color: whitesmoke;
+  text-align: left;
+  font-weight: bold;
+}
 
+.content-table thead th::after {
+  content: attr(data-sort-icon);
+  margin-left: 4px;
 }
 
 .content-table th,
 .content-table td {
-    padding: 12px 15px;
+  padding: 12px 15px;
 }
 
 .content-table tbody tr {
-    border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
 }
 
 .content-table tbody tr:nth-of-type(even) {
-    /* Selects the even element of div siblings */
-    background-color: #f3f3f3;
+  /* Selects the even element of div siblings */
+  background-color: #f3f3f3;
 }
 
 .content-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+  border-bottom: 2px solid #009879;
 }
