--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,10 +69,10 @@ h1 {
   font-size: 0.9em;
   border-radius: 5px 5px 0 0;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  overflow: auto;
 }
 
 .content-table thead th {
+  overflow: auto;
   background-color: var(--clr-text);
   color: whitesmoke;
   text-align: left;
@@ -103,5 +103,5 @@ h1 {
 }
 
 .content-table tbody tr:last-of-type {
-  border-bottom: 2px solid #009879;
+  border-bottom: 2px solid var(--clr-text);
 }
