Fix table width

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,6 +69,7 @@ h1 {
   font-size: 0.9em;
   border-radius: 5px 5px 0 0;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  width: 100%;
 }
 
 .content-table thead th {
@@ -79,8 +80,8 @@ h1 {
   font-weight: bold;
   position: sticky;
   top: 0;
-  min-width: 75%;
-  width: 100%;
+  /* min-width: 75%; */
+  white-space: nowrap;
 }
 
 .content-table thead th::after {
